src/objects/Socialmedia_logfile__c.object
<CustomObject>
    <fields>
        <fullName>Connection_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connection id</label>
        <referenceTo>OAuthService__c</referenceTo>
        <relationshipLabel>Socialmedia logfile</relationshipLabel>
        <relationshipName>Socialmedia_logfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import_message__c</fullName>
        <label>Import message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_records__c</fullName>
        <label>Number of records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Socialmedia logfile</label>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Socialmedia logfile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>